2-terraform-aws-provider-vars/security-group-create.tf
resource "aws_security_group" "allow_all" {
  name        = "sgmode"

  description = "For Terraform Learning"
  ingress {
  from_port   = 22
  to_port     = 22
 protocol    = "tcp"
 cidr_blocks = ["0.0.0.0/0"]

  }



ingress {

    from_port   = 80

    to_port     = 80

    protocol    = "tcp"

    cidr_blocks = ["0.0.0.0/0"]

  }



ingress {

    from_port   = 8080

    to_port     = 8080

    protocol    = "tcp"

    cidr_blocks = ["0.0.0.0/0"]

  }

  egress {

    from_port       = 0

    to_port         = 0

    protocol        = "-1"

    cidr_blocks     = ["0.0.0.0/0"]

 }

}
